<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mandarin AI Chat</string>
    <string name="hint_message">Type a message…</string>
    <string name="send">Send</string>
    <string name="error_prefix">Error: %s</string>
    <string name="pinyin_mode">Pinyin</string>
    <string name="settings">Settings</string>
    <string name="thinking_effort">Thinking Effort</string>
    <string name="thinking_disabled">Disabled</string>
    <string name="thinking_low">Low</string>
    <string name="thinking_high">High</string>
    <string name="thinking_xhigh">Extra High</string>
    <string name="thinking_max">Maximum</string>
    <string name="speak_it">SPEAK IT</string>
</resources>
